kubernetes/08-easyshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopeasy
  namespace: shopeasy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopeasy
  template:
    metadata:
      labels:
        app: shopeasy
    spec:
      containers:
        - name: shopeasy
          image: trainwithshubham/shopeasy-app:1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 20
