kubernetes/09-easyshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopeasy-service
  namespace: shopeasy
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: shopeasy
